Added a mock interface for testing purposes